<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/food_bg"
    tools:context=".CuisineActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="73dp"
        android:layout_height="96dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintTop_toTopOf="@id/icon" />

    <RelativeLayout
        android:id="@+id/cuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/random_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon">

        <TextView
            android:id="@+id/menu_text_cuisine"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_food_rounded_yellow"
            android:gravity="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/head_cuisine"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_food_rounded_orange"
            android:gravity="center"
            android:text="@string/cuisine"
            android:textSize="24sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/random_Count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Random count : "
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/random_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/random_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_bg_rounded_red_500"
        android:padding="10dp"
        android:text="@string/random_btn"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>