<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuSummaryActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="73dp"
        android:layout_height="96dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="@id/icon"
        app:layout_constraintStart_toEndOf="@id/icon"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp" />

    <RelativeLayout
        android:id="@+id/cuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon"
        android:layout_marginTop="120dp">

        <TextView
            android:id="@+id/menu_text_cuisine"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_food_rounded_yellow"
            android:gravity="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/head_cuisine"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_food_rounded_orange"
            android:gravity="center"
            android:text="@string/cuisine"
            android:textSize="24sp" />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cuisine">

        <TextView
            android:id="@+id/text_menu"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_food_rounded_yellow"
            android:gravity="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/head_menu"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_food_rounded_orange"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="24sp" />

    </RelativeLayout>

    <ImageButton
        android:contentDescription="random history"
        android:id="@+id/historyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_rounded"
        android:src="@drawable/icon_history"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:layout_constraintEnd_toStartOf="@id/locationBtn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"/>

    <ImageButton
        android:contentDescription="to google maps"
        android:id="@+id/locationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/historyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu"
        android:background="@drawable/shape_white_rounded"
        android:src="@drawable/icon_location"
        android:padding="2dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:contentDescription="restart random"
        android:text="Restart Random"
        android:textSize="20sp"
        android:id="@+id/restart_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/shape_bg_rounded_red_500"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginBottom="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>